# AIP

./: .gitattributes  .gitignore  AGENTS.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agents/skills/aip-implementation/: SKILL.md
.agents/skills/aip-phase-review/: SKILL.md
.agents/skills/aip-publication-check/: SKILL.md
.agents/skills/aip-security-review/: SKILL.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  Overlay.tsx  main.tsx  overlay-gesture.test.ts  overlay-gesture.ts  overlay-input.test.ts  overlay-input.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/migrations/: 0001_phase0.sql
apps/desktop/src-tauri/src/: database.rs  domain.rs  fullscreen.rs  lib.rs  main.rs  native_overlay_region.rs  overlays.rs  protocol.rs  runtime.rs
apps/desktop/src/components/: AgentSprite.tsx
docs/: ARCHITECTURE.md  CODEX_PHASE_0_PROMPT.md  DATA_MODEL.md  MVP_V0.1.md  PHASE_0_VALIDATION.md  PRODUCT_SPEC.md  ROADMAP.md  SECURITY_AND_PERMISSIONS.md  UI_BEHAVIOR.md  WINDOWS_SETUP.md
scripts/: secrets-scan.mjs
services/runtime/: README.md  pyproject.toml
services/runtime/src/aip_runtime/: __init__.py  __main__.py  protocol.py
services/runtime/tests/: test_runtime.py
