[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "aip-runtime"
version = "0.1.0"
description = "Managed local runtime boundary for AIP"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy==2.3.0",
  "ruff==0.15.22",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "services/runtime/src"
